--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 保加利亚-662.4KB/s(Youtube:不良林), server: 213.183.63.221, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
-  - {name: 🇺🇸 美国-728.4KB/s(Youtube:不良林), server: 38.114.114.67, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 波兰-1.90MB/s(Youtube:不良林), server: 217.30.10.67, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇨🇳 中国-410.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林), server: 185.167.116.24, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇬🇧 英国-730.2KB/s(Youtube:不良林), server: 172.99.190.39, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.50MB/s(Youtube:不良林), server: 38.114.114.69, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.96MB/s(Youtube:不良林), server: 38.68.135.19, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇫🇷 法国-668.5KB/s(Youtube:不良林), server: 145.239.1.100, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-243.2KB/s(Youtube:不良林), server: 38.75.136.21, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 保加利亚-662.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.4KB/s(Youtube:不良林)
-      - 波兰-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-730.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-668.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 保加利亚-662.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.4KB/s(Youtube:不良林)
-      - 波兰-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-730.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-668.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 保加利亚-662.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.4KB/s(Youtube:不良林)
-      - 波兰-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-730.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-668.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 保加利亚-662.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.4KB/s(Youtube:不良林)
-      - 波兰-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-730.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-668.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 保加利亚-662.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.4KB/s(Youtube:不良林)
-      - 波兰-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-730.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-668.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 保加利亚-662.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.4KB/s(Youtube:不良林)
-      - 波兰-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-730.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-668.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 保加利亚-662.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.4KB/s(Youtube:不良林)
-      - 波兰-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-730.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-668.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
