--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林), server: 185.167.116.24, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
-  - {name: 🇬🇧 英国-730.2KB/s(Youtube:不良林), server: 172.99.190.39, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-1.50MB/s(Youtube:不良林), server: 38.114.114.69, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.96MB/s(Youtube:不良林), server: 38.68.135.19, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇫🇷 法国-668.5KB/s(Youtube:不良林), server: 145.239.1.100, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-243.2KB/s(Youtube:不良林), server: 38.75.136.21, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇬🇧 英国-1.37MB/s(Youtube:不良林), server: 172.99.190.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: 38.64.138.145, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: 38.68.134.85, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇫🇷 法国-1.51MB/s(Youtube:不良林), server: 145.239.1.100, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇦🇺 澳大利亚-173.2KB/s(Youtube:不良林), server: 185.167.116.252, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇺🇸 美国-2.22MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: 38.75.136.21, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-730.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-668.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-173.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-730.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-668.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-173.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-730.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-668.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-173.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-730.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-668.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-173.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-730.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-668.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-173.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-730.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-668.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-173.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-730.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-668.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-173.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
