--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-1.37MB/s(Youtube:不良林), server: 172.99.190.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: 38.64.138.145, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: 38.68.134.85, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇫🇷 法国-1.51MB/s(Youtube:不良林), server: 145.239.1.100, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇦🇺 澳大利亚-173.2KB/s(Youtube:不良林), server: 185.167.116.252, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇺🇸 美国-2.97MB/s(Youtube:不良林), server: 38.114.114.69, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-339.7KB/s(Youtube:不良林), server: 149.202.82.172, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 波兰-1.45MB/s(Youtube:不良林), server: 217.30.10.63, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
+  - {name: 🇺🇸 美国-1.43MB/s(Youtube:不良林), server: 167.88.61.175, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
   - {name: 🇺🇸 美国-2.22MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: 38.75.136.21, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-173.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.7KB/s(Youtube:不良林)
+      - 波兰-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-173.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.7KB/s(Youtube:不良林)
+      - 波兰-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-173.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.7KB/s(Youtube:不良林)
+      - 波兰-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-173.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.7KB/s(Youtube:不良林)
+      - 波兰-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-173.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.7KB/s(Youtube:不良林)
+      - 波兰-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-173.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.7KB/s(Youtube:不良林)
+      - 波兰-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-173.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.7KB/s(Youtube:不良林)
+      - 波兰-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
