--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-986.0KB/s(Youtube:不良林), server: 145.239.1.100, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇳🇱 荷兰-2.02MB/s(Youtube:不良林), server: 213.183.51.171, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 38.68.134.85, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-1.83MB/s(Youtube:不良林), server: 38.114.114.67, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇫🇷 法国-884.8KB/s(Youtube:不良林), server: 149.202.82.172, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: 38.75.136.21, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇫🇷 法国-1.14MB/s(Youtube:不良林), server: 145.239.1.100, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-2.56MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇬🇧 英国-1.47MB/s(Youtube:不良林), server: 172.99.190.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 波兰-270.1KB/s(Youtube:不良林), server: 217.30.10.67, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
   - {name: 🇺🇸 美国-2.22MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: 38.75.136.21, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-190.3KB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-986.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-884.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.47MB/s(Youtube:不良林)
+      - 波兰-270.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-986.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-884.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.47MB/s(Youtube:不良林)
+      - 波兰-270.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-986.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-884.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.47MB/s(Youtube:不良林)
+      - 波兰-270.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-986.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-884.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.47MB/s(Youtube:不良林)
+      - 波兰-270.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-986.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-884.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.47MB/s(Youtube:不良林)
+      - 波兰-270.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-986.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-884.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.47MB/s(Youtube:不良林)
+      - 波兰-270.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-986.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-884.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.47MB/s(Youtube:不良林)
+      - 波兰-270.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
